fix container overflow

--- a/RightCollapsibleCompatible.css
+++ b/RightCollapsibleCompatible.css
@@ -9,7 +9,8 @@
         max-width: 100% !important;
         grid-template-columns: 0 minmax(0, 1fr) 0 !important;
         max-height: 100%;
-        overflow:visible hidden;
+        overflow-x:hidden;
+	overflow-y:visible;
     }
 /*Remove this div#page_content if you don't want the inner page to scroll*/
 	div#page_content {
